...
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/btn_cancel_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textColor="#BB0202"
            android:textStyle="bold"
            android:textSize="14sp"
            android:padding="8dp"
            android:layout_marginEnd="10dp" />

...
